# eEVM

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.txt  azure-pipelines.yml
.circleci/: config.yml
.github/workflows/: build_and_test.yml
evm/: account.cpp  disassembler.cpp  processor.cpp  rlp.cpp  rlp.h  simpleaccount.cpp  simpleaccount.h  simpleglobalstate.cpp  simpleglobalstate.h  simplestorage.cpp  simplestorage.h  stack.cpp  transaction.cpp  util.cpp  vm.cpp
include/: account.h  address.h  bigint.h  block.h  disassembler.h  exception.h  globalstate.h  opcode.h  processor.h  rlp.h  stack.h  storage.h  trace.h  transaction.h  util.h  vm.h
include/eEVM/: account.h  bigint.h  block.h  disassembler.h  exception.h  globalstate.h  opcode.h  processor.h  rlp.h  stack.h  storage.h  trace.h  transaction.h  util.h
include/eEVM/simple/: simpleaccount.h  simpleglobalstate.h  simplestorage.h
include/simple/: simpleglobalstate.h
samples/: README.md
samples/disassembler/: main.cpp
samples/erc20/: ERC20.sol  ERC20_combined.json  main.cpp
samples/hello_world/: main.cpp
samples/sum/: main.cpp
src/: account.cpp  disassembler.cpp  processor.cpp  stack.cpp  transaction.cpp  util.cpp
src/simple/: simpleaccount.cpp  simpleglobalstate.cpp  simplestorage.cpp
tests/: harness.cpp  main.cpp  rlp.cpp  unit_test_wrapper.sh
tests/intx/: main.cpp
